--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
-version: '3'
+version: '3.1'
 services:
-  web:
+  api:
     build: .
     command: gunicorn myapp.wsgi:application --bind 0.0.0.0:8000
     volumes:
@@ -10,7 +10,7 @@ services:
     depends_on:
       - db
   db:
-    image: mysql:5.7
+    image: mysql
     environment:
       MYSQL_ROOT_PASSWORD: 09423MyPizzaDB23423
       MYSQL_DATABASE: mypizzadb
