--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 # requirements.txt
 
-django==5.1.1
+asgiref==3.8.1
+Django==5.1.1
+djangorestframework==3.15.2
+mysqlclient==2.2.4
+sqlparse==0.5.1
+tzdata==2024.1
