--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.1'
 services:
   api:
     build: .
@@ -9,15 +8,27 @@ services:
       - "8000:8000"
     depends_on:
       - db
+    networks:
+      - db-network
+
   db:
     image: mysql
+    container_name: mysql_db_pizza
     environment:
-      MYSQL_ROOT_PASSWORD: 09423MyPizzaDB23423
       MYSQL_DATABASE: mypizzadb
+      MYSQL_USER: mypizzadbuser
+      MYSQL_PASSWORD: mypizzadb1254e3452
+      MYSQL_ROOT_PASSWORD: mypizzadbroot3425234dasd3
     ports:
       - "3306:3306"
     volumes:
       - db-data:/var/lib/mysql
+    networks:
+      - db-network
+
 volumes:
   db-data:
+
+networks:
+  db-network:
 
